Apparently, I don't understand model binders.

--- a/source/TestApp/Views/WeatherForecast/Test.cshtml
+++ b/source/TestApp/Views/WeatherForecast/Test.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 
-<form method="post" action="viewData" enctype="multipart/form-data">
+<form method="post" action="model2" enctype="multipart/form-data">
     <input type="file" name="data"/>
     <input type="text" name="name" value="example" />
     <input type="submit" name="go"/>
